Split up default-config and layer config arguments